fix compilation errors on JDK 8