@@ -38,9 +38,9 @@ public class ConfigurationReportProviderTest
         final Path testDir = Files.createTempDirectory("reporttest-");
         try
         {
-            final Path secretPath = Path.of(testDir.toString(), "config", XltConstants.SECRET_PROPERTIES_FILENAME);
+            final Path secretPath = testDir.resolve("config").resolve(XltConstants.SECRET_PROPERTIES_FILENAME);
             Files.createDirectories(secretPath.getParent());
-            Files.writeString(secretPath, "value=Some very secret Value\n", StandardCharsets.ISO_8859_1);
+            Files.write(secretPath, "value=Some very secret Value\n".getBytes(StandardCharsets.ISO_8859_1));
             final ConfigurationReportProvider provider = new ConfigurationReportProvider();
             ReportGeneratorConfiguration config = new ReportGeneratorConfiguration();
             config.setReportDirectory(testDir.toFile());
